[package]
name = "keylogger-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
    "winuser",      # Para hooks, GetSystemMetrics, GetCursorPos
    "windef",       # Para tipos básicos como HHOOK, POINT
    "minwindef",    # Para LPARAM, LRESULT, WPARAM
    "sysinfoapi",   # Para GetSystemInfo, SYSTEM_INFO
    "winnt",        # Para OSVERSIONINFOW
    "winbase",      # Para GetVersionExW
] }
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
