[package]
name = "keylogger-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
    "winreg", 
    "sysinfoapi", 
    "winnt", 
    "minwindef",
    "winuser",
    "winbase",
    "processthreadsapi",
    "securitybaseapi",
    "handleapi",
    "psapi"
] }
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
accesskit = "0.12"
accesskit-windows = "0.15"  # Para Windows específicamente
